Fix updated time spacing issue

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -134,7 +134,7 @@ body {
 
   li {
     margin-left: 20px;
-    width: 120px;
+    width: 130px;
 
     &:last-child {
       text-align: right;
@@ -163,8 +163,7 @@ body {
     line-height: 21px;
     margin-left: 20px;
     padding: 0;
-    width: 120px;
-    // border: 1px solid red;
+    width: 130px;
     text-align: left;
 
     &:last-child {
